# ollama-toolkit

./: Invoke-Action.ps1  justfile
actions/: Get-VramUsage.ps1  Invoke-OllamaChat.ps1  Invoke-PythonHelloRequests.ps1  Invoke-PythonHelloSdk.ps1  Invoke-PythonStructuredOutput.ps1  New-OllamaModel.ps1  Start-WatchVramUsage.ps1  Update-OpenWebUI.ps1
api/pwsh/: embed.ps1  hello.ps1
api/python/: hello-requests.py  hello-sdk.py  pyproject.toml  structured-output.py
models/: Qwen2.5-14B-Instruct-IQ4_XS.Modelfile
