[project]
name = "ollama-api-python-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instructor>=1.7.0",
    "loguru>=0.7.2",
    "ollama>=0.4.2",
    "openai>=1.55.3",
    "pydantic>=2.10.2",
    "requests>=2.32.3",
]
